# rust-template-full

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHEATSHEET.md  Cargo.toml  Dockerfile  Makefile  QUICKSTART.md  README.md  config.example.json  config.example.toml  docker-compose.yml  flake.nix  setup.sh
benches/: benchmarks.rs
deploy/: deploy.sh  rust-app.service
deploy/kubernetes/: deployment.yaml
doc/: DEPLOY.md  IMPROVEMENTS.md  POSTGRES.md
migrations/: 20240101000000_create_users_table.sql  20240101000001_seed_users.sql
src/: db.rs  lib.rs  main.rs
src/api/: handlers.rs  middleware.rs  mod.rs
src/config/: mod.rs
tests/: integration_test.rs
